--- a/COVID-19_Italy/COVID-19 Italy Province.ipynb
+++ b/COVID-19_Italy/COVID-19 Italy Province.ipynb
@@ -5,8 +5,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Studying COVID-19 case in Italy from 24th Feb till 19th March across all the affected regions
-     #https://www.kaggle.com/sudalairajkumar/covid19-in-italy"
+    "# Studying COVID-19 case in Italy from 24th Feb till 19th March across all the affected regions"
    ]
   },
   {
